# reasoning

./: .coverage  .gitignore  AUTOMATIC_SELF_REFLECTION_COMPLETE.md  AUTOMATIC_SELF_REFLECTION_SOLUTION.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  KEYWORD_IMPROVEMENTS_COMPLETE.md  MCP_INTEGRATION.md  MCP_INVESTIGATION_SUMMARY.md  QUALITY_VALIDATION_RESULTS.md  README.md  check_usage.sh  mcp_server.py  plan.md  plan_hook_integration.md  pyproject.toml  test_cognitive_arbiter_integration.py  test_conflict_arbiter.py  test_mcp_server.py  test_observability.py  test_reasoning_observability_integration.py  test_tag_emission.py
.claude/state/: e2e_executions_unknown.jsonl
ReasoningHooks/: Stop_reasoning_quality_gate.py  analyze_reasoning_profiles.py  reasoning_quality_gate_monitor.py
docs/: functional_test_results.md  user_visibility_demo.md
examples/: multi_agent_demo.py
hooks/: PreTool_multi_agent_reasoning.py  Start_reasoning_mode_selector.py  Stop_reasoning_enhanced.py
reasoning/: __init__.py  config.py  engine.py  models.py
reasoning/anti_sycophancy/: __init__.py  hypothesis_as_fact_detector.py
reasoning/llm/: base.py
reasoning/modes/: __init__.py  base.py  cognitive.py  graph.py  multi_agent.py  sequential.py  two_stage.py
reasoning/storage/: __init__.py  base.py  memory.py
scripts/: create_hook_symlinks.py
tests/: demo_user_visibility.py  functional_test_hooks.py  test_Stop_reasoning_quality_gate.py  test_engine.py
tests/anti_sycophancy/: __init__.py  test_hypothesis_as_fact_detector.py
tests/llm/: test_provider.py
tests/modes/: test_multi_agent.py  test_sequential.py  test_sequential_integration.py  test_sequential_quality_validation.py
tests/storage/: test_memory.py
tests/test_hooks/: test_enhanced_quality_gate.py  test_mode_selector.py  test_multi_agent_reasoning.py
tests/test_scripts/: test_create_hook_symlinks.py
(+6 files in other folders)
