[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning"
version = "0.1.0"
description = "Unified reasoning engine consolidating multi-agent, cognitive, graph, and two-stage reasoning modes"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["reasoning", "ai", "multi-agent", "cognitive", "graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "networkx>=3.0",
    "mcp>=1.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

all = [
    "reasoning[dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/reasoning"
Documentation = "https://github.com/yourusername/reasoning/blob/main/README.md"
Repository = "https://github.com/yourusername/reasoning"

[tool.hatch.build.targets.wheel]
packages = ["reasoning"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "mcp_server_mas_sequential_thinking.*"
ignore_missing_imports = true
